# Compilador

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/compilador/: intfixToPostfix.cpp  intfixToPostfix.h  regexToAFN.cpp  regexToAFN.h  transitionsDiagrams.cpp  transitionsDiagrams.h
